workspace = { members = [ "elegant_test", "enum_data_test", "enum_test", "fail_test", "for_test", "generic_test", "loop_test", "match_test", "option_test", "result_test","test001", "test003", "test004", "while_test"] }
[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
