workspace = { members = [ "bingocard_vec", "ex001", "gcd/gcd", "guessing_game", "module_01", "new_start_Rust", "own002", "own3", "own4", "own5", "ownership_001", "power", "vec001"] }
[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
